# assistant

./: .commitlintrc.json  .gitignore  .lintstagedrc.json  .prettierrc  CLAUDE.md  Makefile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.claude/: launch.json  settings.json
daemon/: data.go  go.mod  go.sum  main.go
daemon/internal/domain/: analysis.go  dates.go  expand.go  graph.go  rrule.go  rrule_test.go  today.go
daemon/internal/httpapi/: fallback_brain.go  handlers_calendar.go  handlers_chat.go  handlers_core.go  handlers_servers.go  handlers_tasks.go  handlers_voice.go  handlers_vps.go  hub.go  server.go
daemon/internal/keychain/: keychain.go
daemon/internal/llm/: anthropic.go  brain.go  intent.go  intent_test.go  llm.go  ollama.go  openai.go  provider.go  tools.go
daemon/internal/model/: model.go
daemon/internal/modelmanager/: modelmanager.go  modelmanager_test.go
daemon/internal/sshvps/: metrics.go  sshvps.go
daemon/internal/store/: db.go  schema.sql  seed.go  store.go  store_chat.go  store_graph.go  store_test.go  store_vps.go  util.go
daemon/internal/voice/: apple_darwin.go  service.go  (+7 more)
docs/: context.md  contexto-atual.md
helpers/aqno-speech/: Package.swift
scripts/: build-sidecar.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  dates.ts  tauri.ts  types.ts  voice.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+25 files in other folders)
